# amber-mlips

./: .gitignore  CHANGELOG.md  CITATION.cff  ML_ONLY_MD.md  OPTIONS.md  README.md  TECHNICAL_NOTE.md  pyproject.toml
.github/workflows/: release.yml
_runtime_libs/: libcudart.so.12
_test_runs/aladip_builtin_zero/: amber_mlips.stderr
_test_runs/aladip_builtin_zero_modmpi/: amber_mlips.stderr  mlmm.in
_test_runs/aladip_builtin_zero_modmpi_dvm/: amber_mlips.stderr  dry.stderr  mlmm.info  mlmm.nc  mlmm.out  mlmm.rst7  mlmm_embed.in  mlmm_embed.in.amber_mlips.genmpi.in
amber_mlips.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/: aimnet2.in  mace.in  md.rst7  mlmm.in  mlmm_embedcharge.in  mlmm_mace.in  mlmm_minimize.in  mlmm_orb.in  mlmm_uma.in  orb.in  run.sh  uma.in  uma_embedcharge.in  uma_mlonly.in  uma_mlonly_implicit.in  uma_mlonly_npt.in  water.parm7  water.rst7  waterbox.parm7  waterbox.rst7
plugins/: __init__.py  cli_amber.py  genmpi_server.py  mdin_transform.py  mlip_backends.py  mlip_server.py  mlip_server_entry.py  nonmpi_qc_shim.py  sander_patch.py  xtb_alpb_correction.py  xtb_embedcharge_correction.py
plugins/c_shim/: Makefile  qchem_shim  qchem_shim.c
